--- a/package.json
+++ b/package.json
@@ -1,21 +1,16 @@
 {
-  "name": "fb-bot",
+  "name": "facebook-bot",
   "version": "1.0.0",
-  "description": "Facebook Messenger Group Name Lock Bot",
-  "main": "index.js",
+  "description": "Facebook group nickname and name manager",
+  "main": "bot.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node bot.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "puppeteer": "^22.15.0",
-    "ws3-fca": "^1.0.0",
-    "npmlog": "^7.0.1",
-    "axios": "^1.7.2",
-    "body-parser": "^1.20.2"
-  },
-  "engines": {
-    "node": ">=18.x"
+    "ws3-fca": "latest",
+    "express": "^4.17.1",
+    "https-proxy-agent": "^5.0.0",
+    "dotenv": "^16.0.0"
   }
 }
