--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 BOSS_UID=61570909979895
 DEFAULT_NICKNAME=😈Allah madarchod😈
-DATA_DIR=/path/to/your/project
+DATA_DIR=appstate.json
 GROUP_NAME_CHECK_INTERVAL=60000
 GROUP_NAME_REVERT_DELAY=47000
 FAST_NICKNAME_DELAY_MIN=10000
