--- a/appstate.json
+++ b/appstate.json
@@ -1,13 +1,12 @@
-
 [
     {
         "key": "dbln",
-        "value": "%7B%2261578666851540%22%3A%221MNbaZTU%22%7D",
+        "value": "%7B%2261578666851540%22%3A%22alqzzvSo%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-08-26T09:22:23.557Z",
-        "lastAccessed": "2025-08-26T09:22:23.557Z"
+        "creation": "2025-08-28T02:46:20.788Z",
+        "lastAccessed": "2025-08-28T02:46:20.788Z"
     },
     {
         "key": "datr",
@@ -15,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-26T09:22:23.557Z",
-        "lastAccessed": "2025-08-26T09:22:23.557Z"
+        "creation": "2025-08-28T02:46:20.788Z",
+        "lastAccessed": "2025-08-28T02:46:20.788Z"
     },
     {
         "key": "sb",
@@ -24,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-26T09:22:23.557Z",
-        "lastAccessed": "2025-08-26T09:22:23.557Z"
+        "creation": "2025-08-28T02:46:20.788Z",
+        "lastAccessed": "2025-08-28T02:46:20.788Z"
     },
     {
         "key": "ps_l",
@@ -33,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-26T09:22:23.557Z",
-        "lastAccessed": "2025-08-26T09:22:23.558Z"
+        "creation": "2025-08-28T02:46:20.788Z",
+        "lastAccessed": "2025-08-28T02:46:20.788Z"
     },
     {
         "key": "ps_n",
@@ -42,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-26T09:22:23.558Z",
-        "lastAccessed": "2025-08-26T09:22:23.558Z"
+        "creation": "2025-08-28T02:46:20.788Z",
+        "lastAccessed": "2025-08-28T02:46:20.788Z"
     },
     {
         "key": "locale",
@@ -51,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-26T09:22:23.558Z",
-        "lastAccessed": "2025-08-26T09:22:23.558Z"
+        "creation": "2025-08-28T02:46:20.788Z",
+        "lastAccessed": "2025-08-28T02:46:20.788Z"
     },
     {
         "key": "pas",
@@ -60,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-26T09:22:23.558Z",
-        "lastAccessed": "2025-08-26T09:22:23.558Z"
+        "creation": "2025-08-28T02:46:20.788Z",
+        "lastAccessed": "2025-08-28T02:46:20.788Z"
     },
     {
         "key": "vpd",
@@ -69,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-26T09:22:23.558Z",
-        "lastAccessed": "2025-08-26T09:22:23.558Z"
+        "creation": "2025-08-28T02:46:20.788Z",
+        "lastAccessed": "2025-08-28T02:46:20.788Z"
     },
     {
         "key": "wl_cbv",
@@ -78,8 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-26T09:22:23.558Z",
-        "lastAccessed": "2025-08-26T09:22:23.558Z"
+        "creation": "2025-08-28T02:46:20.788Z",
+        "lastAccessed": "2025-08-28T02:46:20.788Z"
     },
     {
         "key": "wd",
@@ -87,8 +86,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-26T09:22:23.558Z",
-        "lastAccessed": "2025-08-26T09:22:23.558Z"
+        "creation": "2025-08-28T02:46:20.788Z",
+        "lastAccessed": "2025-08-28T02:46:20.788Z"
     },
     {
         "key": "dpr",
@@ -96,8 +95,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-26T09:22:23.558Z",
-        "lastAccessed": "2025-08-26T09:22:23.558Z"
+        "creation": "2025-08-28T02:46:20.788Z",
+        "lastAccessed": "2025-08-28T02:46:20.788Z"
     },
     {
         "key": "c_user",
@@ -105,25 +104,34 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-26T09:22:23.558Z",
-        "lastAccessed": "2025-08-26T09:22:23.558Z"
+        "creation": "2025-08-28T02:46:20.788Z",
+        "lastAccessed": "2025-08-28T02:46:20.788Z"
     },
     {
         "key": "xs",
-        "value": "14%3AWMfmv_Xt7w3M1g%3A2%3A1756200135%3A-1%3A-1",
+        "value": "37%3ALBVi7iYjeoOTkA%3A2%3A1756349170%3A-1%3A-1",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-26T09:22:23.558Z",
-        "lastAccessed": "2025-08-26T09:22:23.558Z"
+        "creation": "2025-08-28T02:46:20.788Z",
+        "lastAccessed": "2025-08-28T02:46:20.788Z"
     },
     {
         "key": "fr",
-        "value": "06GXuoj5urSrC9G0U.AWeRIDCTwIB3-HBqrbCuIvzLddz-GZDa42_TDih23OawEE8hajc.BorT2i..AAA.0.0.BorXzI.AWcxMSMXZKT__HBUGH91Cx3QANU",
+        "value": "1fxaOc2uxaB8SdGEd.AWcP9CmAvDpXo6ACRFxVntqqjaYYrLq_cE0tYZM3FPEg1fa71ro.BorX4P..AAA.0.0.Bor8L0.AWdwTr6bqRj4zalxowRyDQNhlDE",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-26T09:22:23.558Z",
-        "lastAccessed": "2025-08-26T09:22:23.558Z"
+        "creation": "2025-08-28T02:46:20.788Z",
+        "lastAccessed": "2025-08-28T02:46:20.788Z"
+    },
+    {
+        "key": "presence",
+        "value": "C%7B%22t3%22%3A%5B%5D%2C%22utc3%22%3A1756349179451%2C%22v%22%3A1%7D",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-28T02:46:20.788Z",
+        "lastAccessed": "2025-08-28T02:46:20.788Z"
     }
 ]
