--- a/appstate.json
+++ b/appstate.json
@@ -1,30 +1,39 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261578666851540%22%3A%22OhIKidh3%22%7D",
+        "value": "%7B%2261560688802052%22%3A%22FM30xBSp%22%2C%2261578410707719%22%3A%22KfKEjW86%22%2C%2261572571918009%22%3A%22xuLp2CsV%22%2C%2261572213909618%22%3A%22EdvUSlaY%22%2C%2261572619464949%22%3A%22h80EkEPo%22%2C%2261570383270926%22%3A%226fcTIqHU%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-08-28T14:27:22.077Z",
-        "lastAccessed": "2025-08-28T14:27:22.083Z"
+        "creation": "2025-09-13T01:48:36.924Z",
+        "lastAccessed": "2025-09-13T01:48:36.928Z"
     },
     {
         "key": "datr",
-        "value": "oj2taLIBSLDKXAOLPMFzzR_v",
+        "value": "h8mraDsHx1dwLq49pVakPhFE",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-28T14:27:22.083Z",
-        "lastAccessed": "2025-08-28T14:27:22.083Z"
+        "creation": "2025-09-13T01:48:36.928Z",
+        "lastAccessed": "2025-09-13T01:48:36.928Z"
     },
     {
         "key": "sb",
-        "value": "oj2taF_Gn8nnZlgHeYYvXc9k",
+        "value": "h8mraHvv4WbtmmnQxJuwfWZG",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-28T14:27:22.083Z",
-        "lastAccessed": "2025-08-28T14:27:22.083Z"
+        "creation": "2025-09-13T01:48:36.928Z",
+        "lastAccessed": "2025-09-13T01:48:36.928Z"
+    },
+    {
+        "key": "vpd",
+        "value": "v1%3B663x360x3",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-09-13T01:48:36.928Z",
+        "lastAccessed": "2025-09-13T01:48:36.928Z"
     },
     {
         "key": "ps_l",
@@ -32,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-28T14:27:22.083Z",
-        "lastAccessed": "2025-08-28T14:27:22.083Z"
+        "creation": "2025-09-13T01:48:36.928Z",
+        "lastAccessed": "2025-09-13T01:48:36.928Z"
     },
     {
         "key": "ps_n",
@@ -41,88 +50,97 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-28T14:27:22.083Z",
-        "lastAccessed": "2025-08-28T14:27:22.083Z"
-    },
-    {
-        "key": "locale",
-        "value": "en_US",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-28T14:27:22.083Z",
-        "lastAccessed": "2025-08-28T14:27:22.083Z"
-    },
-    {
-        "key": "pas",
-        "value": "61578666851540%3Ai4hnTxgVaP",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-28T14:27:22.083Z",
-        "lastAccessed": "2025-08-28T14:27:22.083Z"
-    },
-    {
-        "key": "vpd",
-        "value": "v1%3B679x360x2.9978671073913574",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-28T14:27:22.083Z",
-        "lastAccessed": "2025-08-28T14:27:22.083Z"
-    },
-    {
-        "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2903%3Btimestamp%3A1756184004%3BCRCM%3A-1683174644",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-28T14:27:22.083Z",
-        "lastAccessed": "2025-08-28T14:27:22.083Z"
-    },
-    {
-        "key": "wd",
-        "value": "712x1342",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-28T14:27:22.084Z",
-        "lastAccessed": "2025-08-28T14:27:22.084Z"
+        "creation": "2025-09-13T01:48:36.928Z",
+        "lastAccessed": "2025-09-13T01:48:36.928Z"
     },
     {
         "key": "dpr",
-        "value": "3.3020102977752686",
+        "value": "3.2983407974243164",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-28T14:27:22.084Z",
-        "lastAccessed": "2025-08-28T14:27:22.084Z"
+        "creation": "2025-09-13T01:48:36.928Z",
+        "lastAccessed": "2025-09-13T01:48:36.928Z"
+    },
+    {
+        "key": "pas",
+        "value": "61560688802052%3A3wcrfx3spl%2C61578410707719%3Axn4PQESau1%2C61570383270926%3A8MEy3LY5ET%2C61572428673599%3AGv7y0ziwc3%2C61572571918009%3Al11elpr9pA%2C61572213909618%3Av4GmrfdUlQ%2C61572619464949%3AQEwhX3BYHq",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-09-13T01:48:36.928Z",
+        "lastAccessed": "2025-09-13T01:48:36.928Z"
+    },
+    {
+        "key": "locale",
+        "value": "en_GB",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-09-13T01:48:36.928Z",
+        "lastAccessed": "2025-09-13T01:48:36.928Z"
+    },
+    {
+        "key": "m_pixel_ratio",
+        "value": "3",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-09-13T01:48:36.928Z",
+        "lastAccessed": "2025-09-13T01:48:36.928Z"
+    },
+    {
+        "key": "wd",
+        "value": "360x803",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-09-13T01:48:36.928Z",
+        "lastAccessed": "2025-09-13T01:48:36.928Z"
     },
     {
         "key": "c_user",
-        "value": "61578666851540",
+        "value": "61578410707719",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-28T14:27:22.084Z",
-        "lastAccessed": "2025-08-28T14:27:22.084Z"
+        "creation": "2025-09-13T01:48:36.928Z",
+        "lastAccessed": "2025-09-13T01:48:36.928Z"
     },
     {
         "key": "xs",
-        "value": "2%3AC8Xw3-q40V43xQ%3A2%3A1756353356%3A-1%3A-1",
+        "value": "50%3AgdKnSCZPvZWMwQ%3A2%3A1757678097%3A-1%3A-1",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-28T14:27:22.084Z",
-        "lastAccessed": "2025-08-28T14:27:22.084Z"
+        "creation": "2025-09-13T01:48:36.928Z",
+        "lastAccessed": "2025-09-13T01:48:36.928Z"
     },
     {
         "key": "fr",
-        "value": "1fxaOc2uxaB8SdGEd.AWffwos1eQeS_sdmHLIB-GdgxrxrCpiihh8wN2azCTEmsoEOfYQ.BorX4P..AAA.0.0.Bor9NO.AWeuvHqcQ2SnHaPYYYz9wHc6TGg",
+        "value": "1Oz9ocbTgqrFK6MuL.AWdDcXrR0nrHn_lvnP08m05ds5v6r8OfBN5sFlKWEC3LZl1Accg.Bowfqd..AAA.0.0.BoxMUP.AWdv8Wj4_vP2dMHwoi-syeKTGEg",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-28T14:27:22.084Z",
-        "lastAccessed": "2025-08-28T14:27:22.084Z"
+        "creation": "2025-09-13T01:48:36.928Z",
+        "lastAccessed": "2025-09-13T01:48:36.928Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2921%3Btimestamp%3A1757725967",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-09-13T01:48:36.928Z",
+        "lastAccessed": "2025-09-13T01:48:36.928Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "100728048%3BT%3A29295468",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-09-13T01:48:36.928Z",
+        "lastAccessed": "2025-09-13T01:48:36.928Z"
     }
 ]
